chnged elemnt types inside the product to make the spacing between the product's child more accurate , then prevented the last flick when adding product that opens new button

--- a/src/base-components/ActionButton/ActionButton.scss
+++ b/src/base-components/ActionButton/ActionButton.scss
@@ -4,8 +4,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  min-height: 40px;
-  min-width: 100px;
 
   padding: 10px;
   margin: 2.5px 0;
@@ -17,7 +15,7 @@
   border-radius: 5px;
   overflow: hidden;
   cursor: pointer;
-  
+
   &:hover {
     opacity: 0.7;
   }
