--- a/src/base-components/ContentWrapper/ContentWrapper.scss
+++ b/src/base-components/ContentWrapper/ContentWrapper.scss
@@ -2,31 +2,14 @@
 
 .content-wrapper {
   display: flex;
-  justify-content: space-between;
   align-items: center;
+  justify-content: space-between;
   flex-direction: column;
   flex: 1 1 auto;
-  padding: 1em;
+  padding: 0.5em;
 
   background-color: $secondary-color;
   border-radius: 10px;
   box-shadow: 5px 5px 10px -1px rgba(black, 0.15);
-  &.product {
-    max-width: 250px;
-    max-height: 200px;
-    height: 200px;
-    opacity: 0.95;
-
-    &:hover {
-      box-shadow: 5px 5px 12px 2px rgba(black, 0.15);
-      max-width: 250px;
-      transform: scaleY(1.01);
-      transform: scaleX(1.01);
-      opacity: 1;
-    }
-  }
-
-  &.custom-cursor-edit {
-    cursor: url('../../assets/images/edit-cursor.png'), alias;
-  }
+  cursor: url('../../assets/images/edit-cursor.png'), alias;
 }
